--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapFragment">
+    tools:context=".MapFragment"
+    android:orientation="vertical">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/main_map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/map_button_group"
+        android:layout_weight="1">
 
     </com.google.android.gms.maps.MapView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/map_button_group"
         android:layout_below="@+id/main_map"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="4dp">
+        android:layout_weight="0">
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="SAVE CURRENT LOCATION" />
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="CREATE A ROUTE BACK"/>
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
