--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,13 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingsFragment">
-
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SETTINGS FRAGMENT"
-        android:textSize="30dp"
-        android:layout_centerInParent="true"/>
+        android:id="@+id/settings_title"
+        android:text="Settings"
+        android:textSize="30dp"/>
+
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enable/Disable Automatic Mode"
+        android:gravity="left"
+        android:layout_below="@id/settings_title"/>
 
 </RelativeLayout>
