--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,8 +7,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome!"
-        android:textSize="30dp"
+        android:text="@string/splash_msg"
+        android:textAlignment="center"
+        android:textSize="50sp"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
