--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -6,14 +6,39 @@
     tools:context=".view.MapFragment"
     android:orientation="vertical">
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/main_map"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/map_button_group"
+        android:layout_height="wrap_content"
         android:layout_weight="1">
 
-    </com.google.android.gms.maps.MapView>
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/main_map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_current_position"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="22dp"
+            android:layout_marginBottom="22dp"
+            android:src="@drawable/ic_my_location_white_24dp"
+            android:backgroundTint="@color/colorPrimary"/>
+    </RelativeLayout>
+
+
+    <!--<com.google.android.gms.maps.MapView-->
+        <!--android:id="@+id/main_map"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_above="@+id/map_button_group"-->
+        <!--android:layout_weight="1">-->
+
+    <!--</com.google.android.gms.maps.MapView>-->
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
