Feature for deleting the saved location, little refactoring and cleaning

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#2941d9</color>
     <color name="colorAccent">#e78133</color>
     <color name="darkGrey">#5c5c5c</color>
+    <color name="Red">#e90000</color>
 </resources>
