--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -26,19 +26,27 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="22dp"
-            android:layout_marginBottom="22dp"
-            android:src="@drawable/ic_my_location_white_24dp"
-            android:backgroundTint="@color/colorPrimary"/>
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="110dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_my_location_white_24dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_testing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="321dp"
-            android:layout_marginTop="33dp" />
+            android:layout_alignStart="@+id/fab_current_position"
+            android:layout_marginTop="90dp"
+            android:src="@drawable/ic_location_city_white_24dp"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_delete_destination"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/fab_current_position"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:src="@drawable/ic_delete_white_24dp" />
     </RelativeLayout>
 
 
