Zooming to the current location on first successful location obtaining, cleaning up the unused blocks of code and refactoring

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#e78133</color>
     <color name="darkGrey">#5c5c5c</color>
     <color name="Red">#e90000</color>
+    <color name="White">#ffffff</color>
+    <color name="Black">#000000</color>
 </resources>
