--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/activity_recognition_mode"
-        android:text="Enable/Disable Automatic Mode"
+        android:text="Disable/Enable Automatic Mode"
         android:gravity="left"
         android:layout_below="@id/settings_title"/>
 
