--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -45,4 +45,18 @@
             android:text="Driving"/>
     </RadioGroup>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/history_text"
+        android:layout_below="@+id/directions_mode_radio_group"
+        android:text="History"
+        android:textSize="30dp"/>
+
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/history_text"
+        android:text="Clear"/>
+
 </RelativeLayout>
