--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.RouteActivity">
+    tools:context=".controller.RouteActivity">
 
     <com.google.android.gms.maps.MapView
         android:layout_width="match_parent"
